[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Maps/Map_0.png" type="Texture" id=1]
[ext_resource path="res://Map/Levels/TestLevel.gd" type="Script" id=2]
[ext_resource path="res://Test/Dummy.tscn" type="PackedScene" id=3]
[ext_resource path="res://Test/Dummy.gd" type="Script" id=4]

[sub_resource type="NavigationPolygon" id=1]
vertices = PoolVector2Array( 21, 224, 500, 222, 493, 383, 166, 288, 166, 393, 23, 293 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ), PoolIntArray( 2, 4, 3 ), PoolIntArray( 5, 0, 3 ) ]
outlines = [ PoolVector2Array( 21, 224, 500, 222, 493, 383, 166, 393, 166, 288, 23, 293 ) ]

[sub_resource type="NavigationPolygon" id=2]
vertices = PoolVector2Array( 904, 259, 520, 258, 523, 191, 897, 29, 26, 25, 26, 202 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ), PoolIntArray( 4, 3, 2, 5 ) ]
outlines = [ PoolVector2Array( 26, 202, 26, 25, 897, 29, 904, 259, 520, 258, 523, 191 ) ]

[node name="Level" type="ParallaxBackground"]
script = ExtResource( 2 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="."]

[node name="Sprite" type="Sprite" parent="ParallaxLayer"]
texture = ExtResource( 1 )
centered = false

[node name="Area2D" type="Area2D" parent="ParallaxLayer/Sprite"]

[node name="Land_0" type="CollisionPolygon2D" parent="ParallaxLayer/Sprite/Area2D"]
visible = false
position = Vector2( 26, 29 )
polygon = PoolVector2Array( -7, -7, 182, -6, 182, 25, 300, 25, 300, -8, 882, -6, 881, 225, 485, 227, 484, 179, -7, 177 )

[node name="WaterNav" type="Navigation2D" parent="."]

[node name="Water" type="NavigationPolygonInstance" parent="WaterNav"]
navpoly = SubResource( 1 )

[node name="LandNav" type="Navigation2D" parent="."]

[node name="Land" type="NavigationPolygonInstance" parent="LandNav"]
navpoly = SubResource( 2 )

[node name="Dummy" parent="." instance=ExtResource( 3 )]
position = Vector2( 305, 305 )
script = ExtResource( 4 )

[node name="Dummy2" parent="." instance=ExtResource( 3 )]
position = Vector2( 708, 121 )
